--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "engines": {
     "node": ">=10"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aldrinpvincent/promise-memoize"
+  },
   "scripts": {
     "start": "tsdx watch",
     "build": "tsdx build",
@@ -33,6 +37,7 @@
   },
   "name": "memoize-promise-fn",
   "author": "aldrinpvincent",
+  "description": "A utility to cache api calls in JavaScript by memoizing promises",
   "module": "dist/memoize-promise-fn.esm.js",
   "size-limit": [
     {
@@ -51,5 +56,12 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.6.2"
-  }
+  },
+  "keywords": [
+    "javascript",
+    "caching",
+    "promise",
+    "memoization",
+    "performance"
+  ]
 }
